--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TODO</string>
+    <string name="move_up">MOVE UP</string>
+    <string name="move_down">MOVE DOWN</string>
+    <string name="delete">DELETE</string>
 </resources>
